--- a/TA22_patronMVC_ejercicio01/pom.xml
+++ b/TA22_patronMVC_ejercicio01/pom.xml
@@ -56,8 +56,11 @@
 			<version>3.3.3</version>
 			<scope>test</scope>
 		</dependency>
-
-
+<dependency>
+    <groupId>com.toedter</groupId>
+    <artifactId>jcalendar</artifactId>
+    <version>1.4</version>
+</dependency>
 	</dependencies>
 
 	<build>
